# dummy_repo

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  tools.sh
.github/workflows/: DoxyFile  README.md  ci.yml  docs.yml
include/: greeter.h
src/: main.cpp
tests/: greeter_test.cpp
